--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ numpy
 scipy
 selenium
 webdriver-manager
-#pytrends
+pytrends
 scikit-learn
 tensorflow
 plotly==5.13.1
 python-decouple
-#psycopg2-binary
-#SQLAlchemy==1.4.4
+psycopg2-binary
+SQLAlchemy==1.4.4
